Fix: Add align-self style in dialog
dialog 이동으로 인해 받게된 hearder의 flex 레이아웃 영향을 align-self: flex-start를 통해 해결

--- a/styles/common.css
+++ b/styles/common.css
@@ -4,7 +4,6 @@
 }
 
 body{
-  height: 100vh;
   overflow-x: hidden;
 }
 
